{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "52de41e3-341a-47cc-b32e-f137aea028b8",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "9859abd6-3d88-40a7-9539-8f5adf431323",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "4a7918df-d0a2-4a45-9933-29f37070a2cb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e68fb732-75ee-4fe4-b21b-80fd0882181f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TranlateShelfE",
                    "type": "Button",
                    "id": "dc48d853-ee67-4169-820e-a4da3d3a9f89",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TranlateShelfQ",
                    "type": "Button",
                    "id": "9455acdb-9a89-450f-b5eb-9a38f5346d91",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TranlateShelfG",
                    "type": "Button",
                    "id": "7c755b0b-7a2e-44c4-9bf1-6120dad9839f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse",
                    "type": "Value",
                    "id": "75d3b0ac-6015-4acf-865d-1429805ec7fa",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseLeftBtn",
                    "type": "Button",
                    "id": "3bd095f9-1a81-4e2b-991a-367efd23e063",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dcc3b49c-27ff-4b0d-803d-d32903499074",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "571f5895-1437-48d1-9a13-16040974fdec",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "32290ad1-619b-4be1-befd-3fadde793485",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "03c9bdde-8b24-427b-bee4-612e3e3de69a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "15f5c660-d78a-4ea4-b6e6-bb1e66fb8c42",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "906ccfe6-4fb7-43ce-afc9-4e97ae40d9b8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1e595634-3ffe-44c8-b5dd-25fc7ea72eea",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9a597e4-3672-4a84-b5bf-f6be2600ff4f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25075e8a-7c69-4516-8093-e3811777bb33",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TranlateShelfE",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0fb82845-6807-4050-8b57-86fe17da2ce8",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TranlateShelfQ",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3130d421-873d-4e1b-bff6-8bd2bf8522b9",
                    "path": "<Keyboard>/g",
                    "interactions": "Hold(duration=1)",
                    "processors": "",
                    "groups": "",
                    "action": "TranlateShelfG",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecc5cb93-34c5-4790-a62d-542f09f8d8f2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94e38aae-1778-4251-9774-845f1fa9c049",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}